2005-08-23  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/{isakmp_agg.c|isakmp_ident.c|isakmp_base.c}: Correctly
	  initialize NAT-T VID to avoid freeing unallocated stuff.

---------------------------------------------

	0.6.1 released

2005-08-14  Emmanuel Dreyfus  <manu@netbsd.org>

	From Francis Dupont <Francis.Dupont@enst-bretagne.fr>
	* src/racoon/dnssec.c: fix bogus test on function result

2005-08-11  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Improved in/out SA addresses check in
	  purge_remote(). Reported by Patrick Ma.

2005-08-08  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/libipsec/{key_debug.c|pfkey.c|pfkey_dump.c}: de-lint, warnings

2005-08-08  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/privsep.c: Fixed a %d -> %zu in
	port_check() (reported by Matthias Scheler).

---------------------------------------------

	0.6.1.rc1 released

2005-08-04  Emmanuel Dreyfus  <manu@netbsd.org>

	* configure.ac: correctly quote RACOON_PATH_LIBS arguments

2005-08-02  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp_inf.c: First fix to
	info_recv_initialcontact(): do a basic IP check when no NAT-T.

2005-07-28  Emmanuel Dreyfus <manu@netbsd.org>

	* src/racoon/{pfkey.c|proposal.c}: IPcomp CPI size fixes

2005-07-26  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Fixed purge_remote()

2005-07-25  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Do not purge IPSec SAs in purge_remote() if
	a new ph1handle exists (patch by Krzysztof Oledzki)

---------------------------------------------

	0.6.1.beta3 released

2005-07-20  Aidas Kasparas  <a.kasparas@gmc.lt>

	* configure.ac: disabled --enable-samode-unspec for linux

2005-07-20  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp_quick.c: Ignore NATOA payloads in
	quick_r1recv() as it is done in quick_i2recv().

2005-07-19  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Checks in isakmp_ph1begin_r() if we got the